--- a/app/views/home/_article_section.html.erb
+++ b/app/views/home/_article_section.html.erb
@@ -1,6 +1,6 @@
 <section class="album bg-white shadow-sm my-5 py-3 px-3">
   <div class="container">
-    <h1 class="h3 my-4"><strong><i class="blockquote-footer">Artikel terbaru</i></strong></h1>
+    <h1 class="h3 my-4"><strong><i class="blockquote-footer">Artikel</i></strong></h1>
     <div class="row">
       <% @articles.each do |a| %>
         <div class="col-md-4">
