--- a/app/views/home/_jumbotron_section.html.erb
+++ b/app/views/home/_jumbotron_section.html.erb
@@ -1,12 +1,13 @@
 <section class="jumbotron jumbotron-fluid bp-home mb-0">
   <div class="container">
-    <div class="col-md-6 offset-6 mt-5 text-white">
-      <h1 class="display-4">Bukan Programmer</h1>
-      <p class="lead">Belajar programming untuk investasi masa depan.</p>
-      <hr class="my-4">
-      <p>Cara terbaik belajar programming adalah dengan memulainya.</p>
-      <a class="btn btn-outline-light btn-lg btn-rounded" href="#" role="button">Belajar Sekarang!</a>
+    <div class="row">
+      <div class="col-md-6 offset-5 mt-5 text-white">
+        <h1 class="display-4">Bukan Programmer</h1>
+        <p class="lead">Belajar programming untuk investasi masa depan.</p>
+        <hr class="my-4">
+        <p>Cara terbaik belajar programming adalah dengan memulainya.</p>
+        <a class="btn btn-outline-light btn-lg btn-rounded" href="#" role="button">Belajar Sekarang!</a>
+      </div>
     </div>
   </div>
 </section>
-
