--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="bg-white">
   <div class="container pt-5 pb-3">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-md-6 mb-3">
         <h4 class="text-dark">Tentang kami</h4>
         <p class="text-secondary text-justify"><b>Bukan Programmer</b> merupakan media pembelajaran berbasis web yang membahas topik - topik menarik seputar dunia IT. <%= link_to '[Selengkapnya...]', about_path, class: 'text-secondary' %></p>
       </div>
-      <div class="col-sm-2">
+      <div class="col-md-2 mb-3">
         <h4 class="text-dark">Navigasi</h4>
         <%= link_to 'Artikel', articles_path, class: 'text-secondary' %><br>
         <%= link_to 'Kategori', categories_path, class: 'text-secondary' %><br>
@@ -16,7 +16,7 @@
 
         <%= link_to 'Kebijakan', privacy_policy_path, class: 'text-secondary' %>
       </div>
-      <div class="col-sm-4">
+      <div class="col-md-4 mb-3">
         <h4 class="text-dark">Kontak</h4>
         <%= link_to 'id.bukanprogrammer@gmail.com', 'mailto:id.bukanprogrammer@gmail.com', class: 'text-secondary' %>
       </div>
