--- a/app/views/privacy_policy/_global_section.html.erb
+++ b/app/views/privacy_policy/_global_section.html.erb
@@ -1,7 +1,9 @@
 <section class="jumbotron jumbotron-fluid bp-page mb-0">
   <div class="container">
-    <div class="col-md-5 offset-6 mt-5 text-white">
-      <h1 class="display-4">Kebijakan Privasi</h1>
+    <div class="row">
+      <div class="col-md-5 offset-6 mt-5 text-white">
+        <h1 class="display-4">Kebijakan Privasi</h1>
+      </div>
     </div>
   </div>
 </section>
