fix article views

--- a/app/views/articles/_disquss.html.erb
+++ b/app/views/articles/_disquss.html.erb
@@ -4,7 +4,6 @@
       <div class="col-md-12">
         <div class="blog-post">
           <h1 class="blog-post-title h3 font-weight-bold">Komentar pada <%= @article.title %></h1>
-
           <div id="disqus_thread"></div>
           <script>
 
@@ -19,7 +18,7 @@
           */
           (function() { // DON'T EDIT BELOW THIS LINE
           var d = document, s = d.createElement('script');
-          s.src = 'https://bukanprogrammer.disqus.com/embed.js';
+          s.src = 'https://bukan-programmer.disqus.com/embed.js';
           s.setAttribute('data-timestamp', +new Date());
           (d.head || d.body).appendChild(s);
           })();
