--- a/app/views/articles/_show_section.html.erb
+++ b/app/views/articles/_show_section.html.erb
@@ -10,17 +10,17 @@
         </p>
         <p class="mt-3">
           <small>
-            <i class="far fa-folder-open"></i> <%= @article.category.name %>
+            <i class="far fa-folder-open"></i> <%= @article.category.name %><br>
+            <i class="far fa-user"></i> Dede Irwanto
           </small>
         </p>
-        <%= link_to articles_path, class: 'btn btn-primary btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Kembali'} do %>
-          <i class="fas fa-arrow-left text-white"></i>
-        <% end %>
-        <%= link_to edit_article_path(@article), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
-          <i class="fas fa-edit text-white"></i>
-        <% end %>
-        <%= link_to article_path(@article), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin akan menghapus?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
-          <i class="fas fa-trash text-white"></i>
+        <% if user_signed_in? %>
+          <%= link_to edit_article_path(@article), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
+            <i class="fas fa-edit text-white"></i>
+          <% end %>
+          <%= link_to article_path(@article), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin akan menghapus?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
+            <i class="fas fa-trash text-white"></i>
+          <% end %>
         <% end %>
       </div>
     </div>
