--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="blog-post col-md-12">
-        <h1 class="blog-post-title h3 font-weight-bold">New Category</h1>
+        <h1 class="blog-post-title h3 font-weight-bold">Category</h1>
         <p class="blog-post-meta"></p>
         <%= form_with(model: category, local: true) do |form| %>
           <% if category.errors.any? %>
@@ -28,7 +28,7 @@
           </div>
 
           <div class="form-group">
-            <%= form.submit 'Create Category', class: 'btn btn-primary' %>
+            <%= form.submit 'Simpan', class: 'btn btn-primary' %>
             <%= link_to 'Kembali', categories_path, class: 'btn btn-danger' %>
           </div>
         <% end %>
