--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,8 +2,11 @@
   <%= render 'global_section' %>
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-9">
         <%= render 'index_section' %>
+      </div>
+      <div class="col-md-3">
+        <%= render 'layouts/global_sidebar' %>
       </div>
     </div>
   </div>
