--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -47,6 +47,26 @@
           </div>
 
           <div class="form-group">
+            <%= form.label :publish, 'Publish tulisan?' %>
+            <div class="form-check">
+              <% if @article.publish == 'ya' %>
+                <%= form.radio_button :publish, 'y', class: 'form-check-input', checked: true  %>
+              <% else %>
+                <%= form.radio_button :publish, 'y', class: 'form-check-input' %>
+              <% end %>
+              <%= form.label :publish, 'Ya', class: 'form-check-label' %>
+            </div>
+            <div class="form-check">
+              <% if @article.publish == 'tidak' %>
+                <%= form.radio_button :publish, 'n', class: 'form-check-input', checked: true %>
+              <% else %>
+                <%= form.radio_button :publish, 'n', class: 'form-check-input' %>
+              <% end %>
+              <%= form.label :publish, 'Tidak', class: 'form-check-label' %>
+            </div>
+          </div>
+
+          <div class="form-group">
             <%= form.submit 'Post', class: 'btn btn-primary btn-sm' %>
             <%= link_to 'Kembali', articles_path, class: 'btn btn-danger btn-sm' %>
           </div>
