--- a/app/views/home/_newsletter_section.html.erb
+++ b/app/views/home/_newsletter_section.html.erb
@@ -22,7 +22,7 @@
         </p>
         <form class="form-inline">
           <!-- <a class="text&#45;danger h2" href=""><i class="fab fa&#45;youtube"></i></a> -->
-          <%= link_to 'https://github.com/bukanprogrammer', class: 'text-dark h2 ml-2' do %>
+          <%= link_to 'https://github.com/bukanprogrammer', class: 'text-dark h2 ml-2', target: :_blank do %>
             <i class="fab fa-github"></i>
           <% end %>
         </form>
