--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,17 +10,23 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class: 'nav-link' %>
+          <%= link_to root_path, class: 'nav-link' do %>
+            <i class="fas fa-home"></i> Home
+          <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Artikel', articles_path, class: 'nav-link' %>
+          <%= link_to articles_path, class: 'nav-link' do %>
+            <i class="fas fa-newspaper"></i> Artikel
+          <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Kategori', categories_path, class: 'nav-link' %>
+          <%= link_to categories_path, class: 'nav-link' do %>
+            <i class="fas fa-folder"></i> Kategori
+          <% end %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Informasi
+            <i class="fas fa-info-circle"></i> Informasi
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to 'Tentang Kami', about_path, class: 'dropdown-item' %>
@@ -34,18 +40,26 @@
           <ul class="navbar-nav mr-3">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user-cog"></i> Admin Page
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <%= link_to 'Artikel', admin_articles_path, class: 'dropdown-item' %>
+              </div>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-3">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-user"></i> <%= current_user.name %>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <%= link_to destroy_user_session_path, method: :delete, class: 'dropdown-item' do %>
-                  <i class="fas fa-arrow-right"></i> Logout
-                <% end %>
+                <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
               </div>
             </li>
           </ul>
         <% end %>
 
-        <%= link_to "https://github.com/bukanprogrammer", class: 'text-dark h2 mr-3' do %>
+        <%= link_to "https://github.com/bukanprogrammer", class: 'text-dark h2 mr-3', target: :_blank do %>
           <i class="fab fa-github"></i>
         <% end %>
       </form>
