--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,10 +1,15 @@
 <% if notice %>
-  <div class="col-md-6 offset-3">
-    <div class="fixed-top alert alert-primary alert-dismissible fade show " role="alert" id="notice">
-      <strong><%= notice %></strong>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
+  <div class="fixed-top alert alert-primary alert-dismissible fade show " role="alert" id="notice">
+    <strong><%= notice %></strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<% elsif alert %>
+  <div class="fixed-top alert alert-danger alert-dismissible fade show " role="alert" id="notice">
+    <strong><%= alert %></strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
 <% end %>
