--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
 
     <%= favicon_link_tag('bp-favicon.ico') %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Roboto&display=swap' %>
+    <%= stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Quicksand&display=swap' %>
     <%= stylesheet_link_tag    'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css' %>
+    <%= stylesheet_link_tag    'https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js' %>
+    <%= javascript_include_tag 'https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js' %>
     <%= javascript_include_tag 'https://cdn.tiny.cloud/1/9tfl7s1x316hbdjrvon6ea2dbf8c51nu42o2b5b8rmvtey1g/tinymce/5/tinymce.min.js' %>
     <script>
     tinymce.init({
@@ -21,7 +25,7 @@
 
     <style>
       * {
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Quicksand', sans-serif;
       }
     </style>
   </head>
@@ -29,8 +33,9 @@
   <body>
     <% if devise_controller? == false %>
       <%= render 'layouts/header' %>
-      <%= render 'layouts/notice' %>
     <% end %>
+
+    <%= render 'layouts/notice' %>
 
     <%= yield %>
 
