--- a/app/views/about/_index_section.html.erb
+++ b/app/views/about/_index_section.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <h3 style="text-align: justify;">Bukan Programmer</h3>
-      <p style="text-align: justify;">Merupakan media pembelajaran berbasis web yang membahas topik - topik menarik seputar dunia IT. Situs ini sebenarnya dibuat untuk mendokumentasikan eksperimen - eksperimen yang mimin lakukan selama menggeluti dunia IT. Selain sebagai dokumentasi pribadi, mimin berharap situs ini bisa membantu teman - teman yang ingin ataupun sedang menggeluti dunia IT khususnya terkait web programming.&nbsp;</p>
+      <p style="text-align: justify;">Merupakan media pembelajaran berbasis web yang membahas topik - topik menarik seputar Teknologi Informasi. Situs ini sebenarnya dibuat untuk mendokumentasikan eksperimen - eksperimen yang mimin lakukan selama menggeluti dunia IT. Selain sebagai dokumentasi pribadi, mimin berharap situs ini bisa membantu teman - teman yang ingin ataupun sedang menggeluti dunia IT khususnya terkait web programming.&nbsp;</p>
       <p style="text-align: justify;">&nbsp;</p>
       <h3 style="text-align: justify;">Kritik dan Saran<br /></h3>
       <p style="text-align: justify;">Dalam penyajiannya, tentu terdapat banyak kekurangan baik dari segi penulisan kalimat, typo dan lain sebagainya. Oleh karena itu, kritik dan saran sangat diperlukan untuk kemudian dilakukan perbaikan.</p>
