--- a/app/views/admin/articles/_index_section.html.erb
+++ b/app/views/admin/articles/_index_section.html.erb
@@ -6,11 +6,13 @@
     <h1 class="h3 my-4"><strong class="text-dark">Semua artikel</strong></h1>
     <div class="row">
       <div class="col-md-12">
-        <table class="table" id="example">
+        <table class="table table-striped table-bordered nowrap" id="example" style="width:100%">
           <thead>
             <tr>
               <th scope="col">No.</th>
               <th scope="col">Title</th>
+              <th scope="col">Author</th>
+              <th scope="col">Catgory</th>
               <th scope="col">Publish</th>
               <th scope="col">Action</th>
             </tr>
@@ -21,40 +23,23 @@
               <tr>
                 <td><%= no = no+1 %></td>
                 <th scope="row"><%= a.title %></th>
+                <td><%= a.user.name  %></td>
+                <td><%= a.category.name  %></td>
                 <td><%= a.publish.titleize  %></td>
                 <td>
-                  <%= link_to article_path(a), class: 'btn btn-primary btn-sm text-white', data: {toggle: "modal", target: ".bd-example-modal-lg-#{a.id}"} do %>
+                  <%= link_to article_path(a), class: 'btn btn-primary btn-sm text-white', target: '_blank' do %>
                     <i class="fas fa-search" data-toggle='tooltip' data-placement='top' title='Lihat'></i>
                   <% end %>
+
                   <%= link_to edit_article_path(a), class: 'btn btn-warning btn-sm text-white' do %>
                     <i class="fas fa-edit" data-toggle='tooltip' data-placement='top' title='Edit'></i>
                   <% end %>
+
                   <%= link_to article_path(a), method: :delete, class: 'btn btn-danger btn-sm text-white', data: {confirm: 'Apakah anda yakin akan menghapus artikel ini?'} do %>
                     <i class="fas fa-trash" data-toggle='tooltip' data-placement='top' title='Hapus'></i>
                   <% end %>
-                  <!--- start modal -->
-                  <div class="modal fade bd-example-modal-lg-<%= a.id %>" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-lg" role="document">
-                      <div class="modal-content p-5">
-                        <h1 class="blog-post-title h3 font-weight-bold"><%= a.title %></h1>
-                        <p class="blog-post-meta"><%= I18n.l(a.created_at.to_date) %> Oleh Dede Irwanto</p>
-                        <%= image_tag("#{a.image_feature}", class: 'mb-4 img-thumbnail') %>
-                        <p class="text-justify">
-                          <%= raw a.content %>
-                        </p>
-                        <p class="mt-3">
-                          <small>
-                            <i class="far fa-folder-open"></i> <%= a.category.name %><br>
-                            <i class="far fa-user"></i> Dede Irwanto
-                          </small>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <!--- end modal -->
                 </td>
               </tr>
-
             <% end %>
           </tbody>
         </table>
