--- a/app/views/articles/_global_section.html.erb
+++ b/app/views/articles/_global_section.html.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron jumbotron-fluid bp-page mb-0">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 offset-6 mt-5 text-white">
+      <div class="col-md-5 offset-md-6 mt-5 text-white">
         <h1 class="display-4">Artikel</h1>
         <div class="input-group mb-3">
           <input type="text" class="form-control form-control-lg" placeholder="Cari tulisan">
