--- a/app/views/articles/_index_section.html.erb
+++ b/app/views/articles/_index_section.html.erb
@@ -14,7 +14,8 @@
                 <h5 class="h3 font-weight-bold card-title"><%= a.title.titleize %></h5>
               </div>
               <div class="card-footer">
-                <small class="text-muted"><%= time_ago_in_words(a.created_at).capitalize %></small>
+                <small class="text-muted"><i class="fas fa-clock"></i> <%= time_ago_in_words(a.created_at).capitalize %></small></br>
+                <small class="text-muted"><i class="fas fa-user-edit"></i> <%= a.user.name %></small>
               </div>
             </div>
           <% end %>
