--- a/app/views/home/_jumbotron_section.html.erb
+++ b/app/views/home/_jumbotron_section.html.erb
@@ -1,8 +1,8 @@
 <section class="jumbotron jumbotron-fluid bp-home mb-0">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 offset-5 mt-5 text-white">
-        <h1 class="display-4">Bukan Programmer</h1>
+      <div class="offset-md-6 col-md-6 mt-5 text-white">
+        <h1 class="display-5 font-weight-bold">Bukan Programmer</h1>
         <p class="lead">Belajar programming untuk investasi masa depan.</p>
         <hr class="my-4">
         <p>Cara terbaik belajar programming adalah dengan memulainya.</p>
