--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-6 mb-3">
         <h4 class="text-dark">Tentang kami</h4>
-        <p class="text-secondary text-justify"><b>Bukan Programmer</b> merupakan media pembelajaran berbasis web yang membahas topik - topik menarik seputar dunia IT. <%= link_to '[Selengkapnya...]', about_path, class: 'text-secondary' %></p>
+        <p class="text-secondary text-justify"><b>Bukan Programmer</b> merupakan media pembelajaran berbasis web yang membahas topik - topik menarik seputar Teknologi Informasi. <%= link_to '[Selengkapnya...]', about_path, class: 'text-secondary' %></p>
       </div>
       <div class="col-md-2 mb-3">
         <h4 class="text-dark">Navigasi</h4>
