--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,16 +4,21 @@
     <title>Bukan Programmer - Tempat Belajar Programming</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <%= favicon_link_tag('bp-favicon.ico') %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Quicksand&display=swap' %>
     <%= stylesheet_link_tag    'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css' %>
     <%= stylesheet_link_tag    'https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css' %>
+    <%= stylesheet_link_tag    'https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css' %>
 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js|https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js' %>
     <%= javascript_include_tag 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js' %>
     <%= javascript_include_tag 'https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js' %>
+    <%= javascript_include_tag 'https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js' %>
+    <%= javascript_include_tag 'https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap4.min.js' %>
     <%= javascript_include_tag 'https://cdn.tiny.cloud/1/9tfl7s1x316hbdjrvon6ea2dbf8c51nu42o2b5b8rmvtey1g/tinymce/5/tinymce.min.js' %>
     <script>
     tinymce.init({
