fix terms views

--- a/app/views/terms/_index_section.html.erb
+++ b/app/views/terms/_index_section.html.erb
@@ -8,7 +8,7 @@
       <p style="text-align: justify;"><strong>Bukan Programmer</strong> adalah tempat berbagi pengetahuan seputar Teknologi Informasi khususnya pemrograman web. Maka setiap konten yang berada di Bukan Programmer adalah milik <a href="https://www.bukanprogrammer.com">www.bukanprogrammer.com</a> dan dapat dibaca oleh pengunjungnya secara gratis serta menyebarkannya dengan mencantumkan copyright <a href="https://www.bukanprogrammer.com">www.bukanprogrammer.com</a></p>
       <p style="text-align: justify;">&nbsp;</p>
       <h4 style="text-align: justify;">KETENTUAN UMUM PENGGUNAAN</h4>
-      <p style="text-align: justify;">Semua hal yang terdapat di Bukan Programmer memiliki syarat-syarat yang diatur oleh ketentuan berikut dan dapat digunakan sebagaimana mestinya, <a href="https://www.bukanprogrammer.com">www.bukanprogrammer.com</a> dikelola dan dikembangkan oleh <a href="../www.facebook.com/dede.irwanto" target="_blank" rel="noopener">Dede Irwanto</a></p>
+      <p style="text-align: justify;">Semua hal yang terdapat di Bukan Programmer memiliki syarat-syarat yang diatur oleh ketentuan berikut dan dapat digunakan sebagaimana mestinya, <a href="https://www.bukanprogrammer.com">www.bukanprogrammer.com</a> dikelola dan dikembangkan oleh <a href="https://www.facebook.com/dede.irwanto" target="_blank" rel="noopener">Dede Irwanto</a></p>
       <p style="text-align: justify;">Berikut adalah ketentuan yang ditetapkan oleh Bukan Programmer. Dengan menggunakan dan atau mengunjungi maka anda menyatakan bahwa:</p>
       <ul style="text-align: justify;">
       <li>Anda setuju untuk terikat dengan Syarat dan Ketentuan yang ditetapkan serta kebijakan mengenai perubahan atau perbaikan Syarat dan Ketentuan di kemudian hari.</li>
