--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= stylesheet_link_tag    'https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css' %>
     <%= stylesheet_link_tag    'https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css' %>
 
-    <%= javascript_link_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js|https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js' %>
     <%= javascript_include_tag 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js' %>
     <%= javascript_include_tag 'https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js' %>
