--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require blog
+ *= require bp-style
  */
 $enable-gradients: true;
 @import "bootstrap";
