--- a/app/assets/stylesheets/bp-style.css
+++ b/app/assets/stylesheets/bp-style.css
@@ -12,7 +12,7 @@ section.bp-home {
   margin-top: 67px;
   width: 100%;
   min-height: 520px;
-  background-image: url('bp-home.jpg');
+  background-image: url('https://i.imgur.com/kK0G9d5.jpg');
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -36,7 +36,7 @@ section.bp-page {
   margin-top: 67px;
   width: 100%;
   height: 350px;
-  background-image: url('bp-page.jpg');
+  background-image: url('https://i.imgur.com/Hm5J7S6.jpg');
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
