--- a/app/views/categories/_index_section.html.erb
+++ b/app/views/categories/_index_section.html.erb
@@ -1,7 +1,9 @@
-<section class="album py-3 bg-white my-5 px-4 py-4 shadow-sm">
+<section class="py-3 my-5 px-4 py-4">
   <div class="container">
     <h1 class="h3 my-4"><strong class="text-dark">Semua kategori</strong></h1>
-    <%= link_to 'New Category', new_category_path, class: 'btn btn-primary btn-sm' %>
+    <% if user_signed_in? %>
+      <%= link_to 'New Category', new_category_path, class: 'btn btn-primary btn-sm' %>
+    <% end %>
     <div class="row">
       <% @categories.each do |c| %>
 
@@ -13,13 +15,15 @@
               <small class="font-weight-bold text-center">(<%= c.articles.count %> Tulisan)</small>
             </div>
           <% end %>
-        <%= link_to edit_category_path(c), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
-          <i class="fas fa-edit text-white"></i>
-        <% end %>
+          <% if user_signed_in? %>
+            <%= link_to edit_category_path(c), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
+              <i class="fas fa-edit text-white"></i>
+            <% end %>
 
-        <%= link_to category_path(c), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin akan menghapus?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
-          <i class="fas fa-trash text-white"></i>
-        <% end %>
+            <%= link_to category_path(c), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin akan menghapus?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
+              <i class="fas fa-trash text-white"></i>
+            <% end %>
+          <% end %>
         </div>
       <% end %>
     </div>
