fix categories views

--- a/app/views/categories/_index_section.html.erb
+++ b/app/views/categories/_index_section.html.erb
@@ -1,4 +1,4 @@
-<section class="py-3 my-5 px-4 py-4">
+<section class="py-3 my-5 px-4">
   <div class="container">
     <h1 class="h3 my-4"><strong class="text-dark">Semua kategori</strong></h1>
     <% if user_signed_in? %>
