--- a/app/views/home/_category_section.html.erb
+++ b/app/views/home/_category_section.html.erb
@@ -1,4 +1,4 @@
-<section class="album py-3 bg-white shadow-sm py-4">
+<section class="album py-3 bg-white shadow-sm py-4" id="category">
   <div class="container">
     <h1 class="h3 my-4"><strong><i class="blockquote-footer">Belajar apa saja?</i></strong></h1>
     <div class="row">
