--- a/app/views/home/_jumbotron_section.html.erb
+++ b/app/views/home/_jumbotron_section.html.erb
@@ -6,7 +6,7 @@
         <p class="lead">Belajar programming untuk investasi masa depan.</p>
         <hr class="my-4">
         <p>Cara terbaik belajar programming adalah dengan memulainya.</p>
-        <a class="btn btn-outline-light btn-lg btn-rounded" href="#" role="button">Belajar Sekarang!</a>
+        <a class="btn btn-outline-light btn-lg btn-rounded page-scroll" href="#category" role="button">Belajar Sekarang!</a>
       </div>
     </div>
   </div>
