--- a/app/assets/stylesheets/bp-style.css
+++ b/app/assets/stylesheets/bp-style.css
@@ -12,8 +12,9 @@ section.bp-home {
   margin-top: 67px;
   width: 100%;
   min-height: 520px;
-  background-image: url('https://i.imgur.com/kK0G9d5.jpg');
-  background-position: center;
+  background: url(https://i.imgur.com/mARnU3i.png), linear-gradient(90deg,#5800e7,#e90000);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
