--- a/app/views/home/_jumbotron_section.html.erb
+++ b/app/views/home/_jumbotron_section.html.erb
@@ -1,13 +1,14 @@
 <section class="jumbotron jumbotron-fluid bp-home mb-0">
   <div class="container">
     <div class="row">
-      <div class="offset-md-6 col-md-6 mt-5 text-white">
-        <h1 class="display-5 font-weight-bold">Bukan Programmer</h1>
+      <div class="col-md-8 offset-md-2 mt-5 text-white text-center">
+        <h1 class="display-4 font-weight-bold">Bukan Programmer</h1>
         <p class="lead">Belajar programming untuk investasi masa depan.</p>
-        <hr class="my-4">
+        <hr class="my-4" style="background-color: #fff;width: 65%;">
         <p>Cara terbaik belajar programming adalah dengan memulainya.</p>
         <a class="btn btn-outline-light btn-lg btn-rounded page-scroll" href="#category" role="button">Belajar Sekarang!</a>
       </div>
     </div>
   </div>
+  <div class="color-overlay"></div>
 </section>
