--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="fixed-top shadow-sm">
   <nav class="navbar navbar-expand-lg navbar-light bg-white px-5">
     <a class="navbar-brand" href="#">
-      <%= image_tag('bp-logo-color.png', height: 40) %>
+      <%= image_tag('bp-logo.png', height: 40) %>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
