fix articles views

--- a/app/views/articles/_index_section.html.erb
+++ b/app/views/articles/_index_section.html.erb
@@ -1,6 +1,6 @@
-<section class="album py-3 bg-white my-5 px-4 py-4 shadow-sm">
+<section class="album py-3 my-5 px-4 py-4 shadow-sm" style="background: linear-gradient(150deg, #5800e7, #e90000)">
   <div class="container">
-    <h1 class="h3 my-4"><strong class="text-dark">Semua artikel</strong></h1>
+    <h1 class="h3 my-4"><strong class="text-white">Kumpulan Artikel</strong></h1>
     <% if user_signed_in? %>
       <%= link_to 'New Article', new_article_path, class: 'btn btn-primary btn-sm' %>
     <% end %>
