--- a/app/views/home/_newsletter_section.html.erb
+++ b/app/views/home/_newsletter_section.html.erb
@@ -2,7 +2,7 @@
   <div class="container">    
     <div class="row">
       <div class="col-md-12 mt-3 text-light">
-        <h1 class="h3 my-4"><strong><i class="blockquote-footer text-light">Surat kabar</i></strong></h1>
+        <h1 class="h2 my-4 font-weight-bold"><strong>Surat kabar</strong></h1>
         <p class="mt-4">
           Subscribe agar mendapatkan berita terbaru dari kami.
         </p>
