--- a/app/views/layouts/_global_sidebar.html.erb
+++ b/app/views/layouts/_global_sidebar.html.erb
@@ -1,28 +1,34 @@
 <aside class="blog-sidebar text-secondary my-5">
-  <div class="album bg-white shadow-sm my-4 py-3">
-    <div class="px-3"><h1 class="h4">Surat kabar</h1></div>
-    <hr class="mx-3">
+  <div class="album shadow-sm my-4 py-3" style="background: linear-gradient(to bottom right, #e90000, #8f00ff)">
+    <div class="px-3"><h1 class="h4 text-white font-weight-bold">Surat kabar</h1></div>
+    <hr class="mx-3" style="background-color: #fff">
     <%= form_for newsletter do |form| %>
       <div class="form-inline px-3">
+        <div class="input-group mb-2 mr-2">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
+          </div>
+          <%= form.text_field :name, class: 'form-control', placeholder: 'Nama' %>
+        </div>
         <div class="input-group mb-2 mr-2">
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope"></i></span>
           </div>
           <%= form.email_field :email, class: 'form-control', placeholder: 'Email' %>
         </div>
-        <%= form.submit 'Subscribe', class: 'btn btn-danger btn-sm mb-2', :onclick=>"if(!confirm('Apakah anda yakin akan mendaftarkan email ini sebagai subscriber?')){return false;}" %>
+        <%= form.submit 'Subscribe', class: 'btn btn-info btn-sm mb-2', :onclick=>"if(!confirm('Apakah anda yakin akan mendaftarkan email ini sebagai subscriber?')){return false;}" %>
       </div>
     <% end %>
   </div>
 
   <div class="album bg-white shadow-sm my-4 py-3">
-    <div class="px-3"><h1 class="h4">Artikel terbaru</h1></div>
-    <hr class="mx-3">
+    <div class="px-3"><h1 class="h4 font-weight-bold">Artikel terbaru</h1></div>
+    <hr class="mx-3" style="background-color: #fff">
     <ul class="list-group mx-3">
       <% recent_articles.each do |r| %>
         <%= link_to article_path(r), class: 'text-decoration-none text-secondary' do %>
-          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
-            <%= r.title %>
+          <li class="list-group-item d-flex justify-content-between align-items-center my-1" style="background: #8f00ff">
+            <span class="text-white"><%= r.title %></span>
           </li>
         <% end %>
       <% end %>
@@ -30,14 +36,14 @@
   </div>
 
   <div class="album bg-white shadow-sm my-4 py-3">
-    <div class="px-3"><h1 class="h4">Kategori</h1></div>
+    <div class="px-3"><h1 class="h4 font-weight-bold">Kategori</h1></div>
     <hr class="mx-3">
     <ul class="list-group mx-3">
       <% categories.each do |c| %>
         <%= link_to category_path(c), class: 'text-decoration-none text-secondary' do %>
-          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
-            <%= c.name %>
-            <span class="badge badge-primary badge-pill"><%= c.articles.count %></span>
+          <li class="list-group-item d-flex justify-content-between align-items-center my-1" style="background: #8f00ff">
+            <span class="text-white"><%= c.name %></span>
+            <span class="badge badge-danger badge-pill"><%= c.articles.count %></span>
           </li>
         <% end %>
       <% end %>
