--- a/app/views/about/_global_section.html.erb
+++ b/app/views/about/_global_section.html.erb
@@ -1,10 +1,13 @@
-<section class="jumbotron jumbotron-fluid bp-page mb-0">
+<section class="jumbotron jumbotron-fluid bp-page mb-0" style="position: relative">
   <div class="container">
     <div class="row">
       <div class="col-md-5 offset-md-6 mt-5 text-white">
-        <h1 class="display-4">Tentang Kami</h1>
+        <h1 class="display-4 font-weight-bold">Tentang Kami</h1>
       </div>
     </div>
+  </div>
+  <div class="pb-5" style="width: 100%">
+    <div class="cloud-img mb-0"></div>
   </div>
 </section>
 
